--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,18 @@
 .App-Navigation {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 75px;
+  border-top: 4px solid black;
+  background-color: white;
+  z-index: 10;
+  background-image: linear-gradient(
+      to bottom,
+      rgb(255, 255, 255),
+      rgba(255, 255, 255, 0.861)
+    ),
+    url("../Assets/logo.svg");
+  background-size: 90px;
+  background-clip: content-box;
+  background-repeat: repeat;
 }
