--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,8 +8,8 @@
   background-color: white;
   background-image: linear-gradient(
       to bottom,
-      rgb(255, 255, 255),
-      rgba(255, 255, 255, 0.52)
+      rgb(255, 255, 255, 0.52),
+      rgba(255, 255, 255)
     ),
     url("../Assets/logo.svg");
   background-size: 90px;
