--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,6 @@
 .Header {
   height: 130px;
+  z-index: 20;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,4 +29,15 @@
   color: white;
   border-radius: 30px;
   width: 400px;
+}
+
+@media (max-width: 600px) {
+  .Header-heading1 {
+    padding: 0;
+    margin: -20px;
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    width: 300px;
+  }
 }
