--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -52,7 +52,7 @@
   border-radius: 10px;
   border: 0;
   color: black;
-  padding: 10px 5vw;
+  padding: 10px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
